# public-portfolio

./: LICENSE  README.md
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Secrets.example.toml  Secrets.toml.example  Shuttle.toml  docker-compose.yml
backend/.aegiside/core/: context-orchestrator.json  main-router.json
backend/.aegiside/knowledge/architecture/: architecture-router.json  architecture.json  architecture.mmd  codemap.json  relation.json
backend/.aegiside/knowledge/business/: bootstrap_costs.json  indian_taxes.json  international_pricing.json  monetization_strategy.json  oauth_security.json  payment_gateway_summary.json
backend/.aegiside/knowledge/governance/: governance-router.json
backend/.aegiside/runtime/ace/: ace-router.json  causality-tracker.json  metrics-dashboard.json  self-evolution-loop.json  triad-tracker.json  version-control.json
backend/.aegiside/runtime/incidents/: incident_response_guide.json  reward_hacking_incidents.json
backend/.aegiside/runtime/mona/: mona_config.json  obfuscation_monitor.json  reward_hacking_patterns.json
backend/.aegiside/runtime/optimization/: compression-metadata-template.json  context-window-manager.json  meta-evaluator.json  (+1 more)
backend/.claude/commands/: validate.md  validate.sh
backend/docs/: MIGRATION_OVERVIEW.md  RUST_BEST_PRACTICES.md
backend/src/: error.rs  main.rs
backend/src/api/: debug_db.rs  mod.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs
backend/src/database/: client.rs  connection.rs  mod.rs
backend/src/middleware/: cors.rs  mod.rs  tracing_layer.rs
backend/src/models/: certificate.rs  chat.rs  mod.rs  project.rs
backend/src/repositories/: mod.rs
(+246 files in other folders)
