[package]
name = "portfolio-rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shuttle & Web Framework
shuttle-runtime = "0.57.0"
shuttle-axum = "0.57.0"
axum = { version = "0.8", features = ["multipart", "macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower_governor = "0.8"

# Database
mongodb = "3.2"
bson = { version = "2.13", features = ["serde_with"] }

# Serialization & Validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP Client (for Gemini API & Cloudinary)
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto (for Cloudinary signatures & password hashing)
sha2 = "0.10"
hex = "0.4"
bcrypt = "0.17"

# JWT Authentication
jsonwebtoken = "9.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

# OpenAPI/Swagger Documentation
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"], optional = true }
utoipa-swagger-ui = { version = "9.0", features = ["axum"], optional = true }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.9.2"

[features]
default = ["swagger"]
swagger = ["utoipa", "utoipa-swagger-ui"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
